--- a/app/views/whiteboard.erb
+++ b/app/views/whiteboard.erb
@@ -4,24 +4,23 @@
     <link rel="stylesheet" href="/stylesheets/board.css" />
   </head>
   <body>
+    <div id="page" ng-view></div>
+
+    <div id="toolbelt" ng-controller="Toolbelt">
+      <a ng-click='replay()'>Replay</a>
+    </div>
+
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="http://cdn.pubnub.com/pubnub-3.5.1.min.js"></script>
-    <script src="/javascripts/vendor/hammer.js"></script>
-    <script src="/javascripts/debug.js"></script>
     <script src="/javascripts/module.js"></script>
-    <script src="/javascripts/routes.js"></script>
     <script src="/javascripts/services/push.js"></script>
     <script src="/javascripts/services/line.js"></script>
     <script src="/javascripts/services/canvas.js"></script>
     <script src="/javascripts/services/tape.js"></script>
+    <script src="/javascripts/controllers/create_board.js"></script>
     <script src="/javascripts/controllers/whiteboard.js"></script>
     <script src="/javascripts/controllers/toolbelt.js"></script>
-    <script src="/javascripts/boot.js"></script>
-
-    <div id="toolbelt" ng-controller="Toolbelt">
-      <a ng-click='replay()'>Replay</a>
-      <a ng-click='console.log("great")'>Test</a>
-    </div>
+    <script src="/javascripts/routes.js"></script>
   </body>
 </html>
