--- a/app/views/new.html
+++ b/app/views/new.html
@@ -1,1 +1,4 @@
-Hi.
+<form ng-submit="create()">
+  <input type="text" ng-model="name" placeholder="Name your space"/>
+  <input type="submit" value="Go" />
+</form>
