WIP: Add Kevin's Styles

--- a/app/views/new.html
+++ b/app/views/new.html
@@ -1,4 +1,23 @@
-<form ng-submit="create()">
-  <input type="text" ng-model="name" placeholder="Name your space"/>
-  <input type="submit" value="Go" />
-</form>
+<div id="sign_up">
+  <p>Whiteboards you can share.</p>
+  <div id="try_it_out">
+    <a class="hero_button rounded" href="/"><strong>
+    Try it out!</strong>
+    </a>
+  </div>
+
+
+  <h5> Want to save them?</h5>
+  <form onsubmit="alert('Nope.')">
+    <input type="text" email="email address" placeholder="email address">
+    <input type="text" password="password" placeholder="password">
+  </form>
+  <a class="primary_button rounded" href="/">
+    <strong>Sign Up</strong>
+  </a>
+
+  <form ng-submit="create()">
+    <input type="text" ng-model="name" placeholder="Name your space"/>
+    <input type="submit" value="Go" />
+  </form>
+</div>
