--- a/app/stylesheets/board.css
+++ b/app/stylesheets/board.css
@@ -2,3 +2,5 @@ body { padding: 0; margin: 0; cursor: pointer;}
 
 #toolbelt { position: fixed; bottom: 0; right: 0; background-color: black; color: white;}
 #toolbelt a { color: white;}
+
+#toolbelt, canvas { display: none;}
