--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/button_styles.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/forms.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/global.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/home.css">
     <title>Whitespace</title>
   </head>
   <body>
@@ -21,10 +22,6 @@
     </header>
 
     <div id="page" ng-view></div>
-
-    <div id="toolbelt" ng-controller="Toolbelt">
-      <a ng-click='replay()'>Replay</a>
-    </div>
 
     <footer>
       <p class="footer_text">&#169; The Particular Co. 2013</p>
