--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,7 @@
 <html ng-app="wb">
   <head>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="/stylesheets/board.css" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/button_styles.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/forms.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/global.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/home.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/compile.css">
     <title>Whitespace</title>
   </head>
   <body>
@@ -30,14 +26,9 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="http://cdn.pubnub.com/pubnub-3.5.1.min.js"></script>
-    <script src="/javascripts/module.js"></script>
-    <script src="/javascripts/services/push.js"></script>
-    <script src="/javascripts/services/line.js"></script>
-    <script src="/javascripts/services/canvas.js"></script>
-    <script src="/javascripts/services/tape.js"></script>
-    <script src="/javascripts/controllers/create_board.js"></script>
-    <script src="/javascripts/controllers/whiteboard.js"></script>
-    <script src="/javascripts/controllers/toolbelt.js"></script>
-    <script src="/javascripts/routes.js"></script>
+
+    <% @javascripts.each do |script| %>
+      <script src="/javascripts/<%= script %>"></script>
+    <% end %>
   </body>
 </html>
