Checkpoint: Add clear
There's a button on the toolbelt now that will clear the canvas.

--- a/app/views/whitespace.html
+++ b/app/views/whitespace.html
@@ -1,6 +1,7 @@
-<div id="space">
+<div id="whitespace">
   <canvas width="960" height="640"></canvas>
   <div id="toolbelt" ng-controller="Toolbelt">
     <a class="secondary_button rounded" ng-click='replay()'>Replay</a>
+    <a class="secondary_button rounded" ng-click='clear()'>Clear</a>
   </div>
 </div>
