--- a/app/views/whitespace.html
+++ b/app/views/whitespace.html
@@ -1,6 +1,10 @@
 <div id="whitespace">
-  <canvas width="960" height="640"></canvas>
+  <div id="frame">
+    <canvas width="960" height="640"></canvas>
+  </div>
   <div id="toolbelt" ng-controller="Toolbelt">
+    <a class="secondary_button rounded" ng-click='pen()'>Pen</a>
+    <a class="secondary_button rounded" ng-click='text()'>Text</a>
     <a class="secondary_button rounded" ng-click='replay()'>Replay</a>
     <a class="secondary_button rounded" ng-click='clear()'>Clear</a>
   </div>
