Add color support to pen
This adds a setColor method to the pen, and includes the color in the payload that is sent to tape and the push server.

It also modifies canvas.drawSegment and canvas.drawLine to allow a color in the options hash.

Lastly, it adds a 'Black Pen', 'Red Pen', and 'Blue Pen' to the toolbelt.

--- a/app/views/whitespace.html
+++ b/app/views/whitespace.html
@@ -3,7 +3,10 @@
     <canvas width="960" height="640"></canvas>
   </div>
   <div id="toolbelt" ng-controller="Toolbelt">
-    <a class="secondary_button rounded" ng-click='pen()'>Pen</a>
+    <a class="secondary_button rounded" ng-click='pen()'>Black Pen</a>
+    <a class="secondary_button rounded" ng-click='pen("#ff0000")'>Red Pen</a>
+    <a class="secondary_button rounded" ng-click='pen("#00ff00")'>Green Pen</a>
+    <a class="secondary_button rounded" ng-click='pen("#0000ff")'>Blue Pen</a>
     <a class="secondary_button rounded" ng-click='text()'>Text</a>
     <a class="secondary_button rounded" ng-click='replay()'>Replay</a>
     <a class="secondary_button rounded" ng-click='clear()'>Clear</a>
